tests/negative/private_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that private members cannot be accessed from outside the class.

class Secret {
    private code: int = 1234;
}

let s = new Secret();
print(s.code); // Error: code is private
